FIX: Vertical align welcome page.

--- a/couchdb/_attachments/css/welcome.css
+++ b/couchdb/_attachments/css/welcome.css
@@ -1,12 +1,20 @@
-body {
+#body {
+  height: 100%;
+}
+
+#main {
   font-family: "Trebuchet MS";
   font-size: 90%;
+  top:50%;
   background: linear-gradient(to bottom, rgba(235,235,235,1) 0%, white 5%);
+          transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+  position:relative;
+  padding:0px;
 }
 
 #top {
-  margin: 1%;
-  margin-top: 30px;
   text-align: center;
 }
 
@@ -50,18 +58,21 @@ body {
   float: left;
 }
 
-#middle .start {
-  font-size: 120%;
-  border: 3px black solid;
-  padding: 0 6px;
-  position: relative;
-  box-shadow: 3px 3px 0 black;
-  bottom: -30px;
-  text-decoration: none;
-  color: black;
+#bottom {
+  text-align: center;
+  height: 32px;
 }
 
-#middle .start:hover {
-  box-shadow: 5px 5px 10px black;
-  font-size: 130%;
+#bottom a.start {
+    font-size: 18px;
+    border: 3px black solid;
+    padding: 0 6px;
+    box-shadow: 3px 3px 0 black;
+    text-decoration: none;
+    color: black;
+}
+
+#bottom a.start:hover {
+    box-shadow: 5px 5px 10px black;
+    font-size: 19px;
 }
